Entrega proyecto home-02

--- a/src/components/footer/footer.astro
+++ b/src/components/footer/footer.astro
@@ -1,6 +1,6 @@
 ---
 import './footer.css';
-import Logo from '../../assets/astro.svg';
+import LogoAlagro from '../../assets/icons/logoAlagro.png';
 import Facebook from '../../assets/icons/facebook.png';
 import Instagram from '../../assets/icons/instagram.png';
 import WhatsApp from '../../assets/icons/whatsapp.png';
@@ -8,48 +8,44 @@ import WhatsApp from '../../assets/icons/whatsapp.png';
 
 <footer class="footer">
 	<div class="footer-container">
-		<!-- COLUMNA 1 -->
 		<div class="footer-brand">
-			<img src={Logo.src} alt="Logo" class="footer-logo" />
-			<p>
-				Somos una cooperativa comprometida con el desarrollo sostenible,
-				la calidad y el bienestar de nuestras comunidades.
-			</p>
-		</div>
-
-		<!-- COLUMNA 2 -->
-		<div class="footer-links">
-			<h4>Empresa</h4>
+			<img src={LogoAlagro.src} alt="Logo" class="footer-logo" />
 			<a href="#">Quiénes somos</a>
 			<a href="#">Productos</a>
 			<a href="#">Gestión social</a>
 			<a href="#">PQRS</a>
 		</div>
 
-		<!-- COLUMNA 3 -->
 		<div class="footer-links">
+			<div class="social-icons">
+				<a href="#"><img src={Facebook.src} alt="Facebook" /></a>
+				<a href="#"><img src={Instagram.src} alt="Instagram" /></a>
+				<a href="#"><img src={WhatsApp.src} alt="WhatsApp" /></a>
+			</div>
+
 			<h4>Contacto</h4>
-			<a href="#">📍 7 municipios</a>
-			<a href="#">📞 +57 300 000 0000</a>
-			<a href="#">✉️ contacto@cooperativa.com</a>
+			<p>📍 Calle 62 #44-78</p>
+			<p>Centro de convenciones
+				Rionegro - Antioquia</p>
+			<p>📞 +57 323 413 37 51</p>
+			<p>✉️ alagrocoop@gmail.com</p>
 		</div>
 
-		<!-- COLUMNA 4 -->
-		<div class="social-icons">
-            <a href="#" aria-label="Facebook">
-                <img src={Facebook.src} alt="Facebook" />
-            </a>
-            <a href="#" aria-label="Instagram">
-                <img src={Instagram.src} alt="Instagram" />
-            </a>
-            <a href="#" aria-label="WhatsApp">
-                <img src={WhatsApp.src} alt="WhatsApp" />
-            </a>
-        </div>
-
+		<div class="footer-form">
+			<h4>Quiero ser asociado</h4>
+			<form class="asociado-form">
+				<input type="text" placeholder="Nombre" />
+				<input type="tel" placeholder="Teléfono" />
+				<input type="email" placeholder="Email" />
+				<textarea placeholder="Mensaje" rows="2"></textarea>
+				<button type="submit">Enviar</button>
+			</form>
+		</div>
 	</div>
 
 	<div class="footer-bottom">
-		<p>© {new Date().getFullYear()} Cooperativa. Todos los derechos reservados.</p>
+		<p>© 2026 Alagro. Todos los derechos reservados.
+			Desarrollo web por Juan José Cardona
+		</p>
 	</div>
 </footer>
