--- a/src/components/home/card/card.astro
+++ b/src/components/home/card/card.astro
@@ -7,24 +7,24 @@ import './card.css';
 	<article class="card">
 		<img src="/cards/calidad.jpg" alt="Calidad" />
 		<div class="card-content">
-			<h3>Mas de <span class="counter" data-target="9">1</span></h3>
-			<p>Años aportando al desarrollo de nuestros campesinos.</p>
+			<h3>Contamos con <span class="counter" data-target="23">1</span></h3>
+			<p>Puntos de acopio de leche estratégicamente ubicados.</p>
 		</div>
 	</article>
 
 	<article class="card">
 		<img src="/cards/sostenibilidad.jpg" alt="Sostenibilidad" />
 		<div class="card-content">
-			<h3>Hoy son <span class="counter" data-target="236">1</span></h3>
-			<p>Familias beneficiadas por nuestra Cooperativa.</p>
+			<h3>Hoy contamos con <span class="counter" data-target="256">1</span></h3>
+			<p>Productores aliados a nuestra labor.</p>
 		</div>
 	</article>
 
 	<article class="card">
 		<img src="/cards/confianza.jpg" alt="Confianza" />
 		<div class="card-content">
-			<h3>Contamos con <span class="counter" data-target="26">1</span></h3>
-			<p>Puntos de acopio distribuidos en 7 municipios.</p>
+			<h3>Más de <span class="counter" data-target="50000">1</span> niños en Antioquia</h3>
+			<p>Se benefician de nuestro aporte a su alimentación.</p>
 		</div>
 	</article>
 </section>
