--- a/src/components/home/proposito/proposito.astro
+++ b/src/components/home/proposito/proposito.astro
@@ -3,10 +3,20 @@ import './proposito.css';
 ---
 
 <section class="descripcion">
-    <h1>Propósito empresarial</h1>
-    <p>Somos una cooperativa dedicada a la producción y comercialización de 
-        productos lácteos de alta calidad, comprometida con el bienestar de 
-        nuestros socios y el desarrollo sostenible de nuestra comunidad.
-    </p>
-    <a href="#">Leer más</a>
+	<h1>Propósito empresarial</h1>
+
+	<p>
+		Trabajamos unidos para cuidar, fortalecer y dignificar el trabajo de los pequeños
+		productores del Oriente Antioqueño, acompañándolos con asociatividad,
+		transformación e innovación, para que su esfuerzo diario se convierta en
+		bienestar, oportunidades reales y un futuro más justo y sostenible para sus
+		familias y para el campo.
+	</p>
+
+	<a href="#" class="btn-leer">
+        Descubre nuestro propósito
+        <span>→</span>
+    </a>
+
 </section>
+
