--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,12 +1,25 @@
 .header {
 	position: relative;
+	width: 100%;
+	box-sizing: border-box;
 	display: flex;
 	align-items: center;
 	padding: 1rem 2rem;
 	background-color: var(--color-header);
-
 	border-bottom-left-radius: 50px;
 	border-bottom-right-radius: 50px;
+
+	transition: box-shadow 0.3s ease, backdrop-filter 0.3s ease;
+}
+
+.header {
+	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
+	backdrop-filter: blur(6px);
+}
+
+.header:hover {
+	box-shadow: 0 15px 15px rgba(0, 0, 0, 0.15);
+	backdrop-filter: blur(6px);
 }
 
 /* IZQUIERDA */
@@ -21,12 +34,25 @@
 	gap: 0.5rem;
 }
 
+.header-right img {
+	height: 55px;
+	width: auto;
+	object-fit: contain;
+	opacity: 0.85;
+	transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.header-right img {
+	animation: fadeIn 0.6s ease forwards;
+}
+
 /* MENÚ CENTRADO */
 .header-center {
 	position: absolute;
-	left: 50%;
+	left: 48%;
 	transform: translateX(-50%);
-	gap: 1rem;
+	display: flex;
+	gap: 0.75rem;
 }
 
 .separator {
@@ -37,14 +63,31 @@
 
 /* LINKS */
 .header-center a {
-	padding: 0.5rem 1rem;
+	font-size: 20px;
+	padding: 0.5rem 0.5rem;
 	border-radius: 999px;
-	transition: background-color 0.3s ease, color 0.3s ease;
+	backdrop-filter: blur(6px);
+	
+	transition:
+		transform 0.25s ease,
+		background-color 0.3s ease,
+		box-shadow 0.3s ease;
+
+	transform-origin: center bottom;
 }
+
+.header-center:hover a {
+	transform: scale(0.95);
+	opacity: 0.8;
+}
+
 
 .header-center a:hover {
 	background-color: var(--color-secondary);
 	color: var(--color-text);
+
+	transform: scale(1.25) translateY(-4px);
+	opacity: 1;
 }
 
 /* HAMBURGER */
@@ -149,7 +192,6 @@
         width: 100%;
         margin-top: 1rem;
     }
-
 
 	.header {
 		flex-wrap: wrap;
