--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width" />
 	<link rel="stylesheet" href="/src/styles/global.css" />
+	<link rel="icon" type="image/png" href="/src/assets/icons/logoEmpresa.png" />
 	<title>Mi Web</title>
 </head>
 
