--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -1,3 +1,7 @@
+---
+import { ViewTransitions } from 'astro:transitions';
+---
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -5,7 +9,8 @@
 	<meta name="viewport" content="width=device-width" />
 	<link rel="stylesheet" href="/src/styles/global.css" />
 	<link rel="icon" type="image/png" href="/src/assets/icons/logoEmpresa.png" />
-	<title>Mi Web</title>
+	<title>Alagro</title>
+	<ViewTransitions />
 </head>
 
 <body>
