--- a/src/components/home/card/card.astro
+++ b/src/components/home/card/card.astro
@@ -5,7 +5,7 @@ import './card.css';
 
 <section class="cards">
 	<article class="card">
-		<img src="/cards/calidad.jpg" alt="Calidad" />
+		<img src="/cards/acopios.png" alt="Acopios" />
 		<div class="card-content">
 			<h3>Contamos con <span class="counter" data-target="23">1</span></h3>
 			<p>Puntos de acopio de leche estratégicamente ubicados.</p>
@@ -13,7 +13,7 @@ import './card.css';
 	</article>
 
 	<article class="card">
-		<img src="/cards/sostenibilidad.jpg" alt="Sostenibilidad" />
+		<img src="/cards/productores.png" alt="Productores" />
 		<div class="card-content">
 			<h3>Hoy contamos con <span class="counter" data-target="256">1</span></h3>
 			<p>Productores aliados a nuestra labor.</p>
@@ -21,7 +21,7 @@ import './card.css';
 	</article>
 
 	<article class="card">
-		<img src="/cards/confianza.jpg" alt="Confianza" />
+		<img src="/cards/ninos.png" alt="Niños" />
 		<div class="card-content">
 			<h3>Más de <span class="counter" data-target="50000">1</span> niños en Antioquia</h3>
 			<p>Se benefician de nuestro aporte a su alimentación.</p>
