--- a/src/components/home/producto/producto.css
+++ b/src/components/home/producto/producto.css
@@ -13,10 +13,15 @@ h2 {
 	opacity: 0.85;
 }
 
+.productos {
+	background: url('/fondo_nuestros_productos.png');
+	background-size: cover;
+	background-position: center;
+}
+
 .productos h1{
 	margin-bottom: 2rem;
 	color: var(--color-white);
-
 }
 
 .aliados h1{
@@ -33,6 +38,11 @@ h2 {
 	display: flex;
 	gap: 3rem;
 	align-items: center;
+}
+
+.productos-logos img {
+	height: 100px;
+	opacity: 0.85;
 }
 
 .logos-marquee {
