--- a/src/components/home/slider/slider.astro
+++ b/src/components/home/slider/slider.astro
@@ -3,15 +3,15 @@ import './slider.css';
 
 const slides = [
 	{
-		image: '/slides/slide1.png',
+		image: '/slides/banner_kits.png',
 		link: 'https://www.youtube.com/'
 	},
 	{
-		image: '/slides/slide2.png',
+		image: '/slides/slide3.png',
 		link: 'https://www.youtube.com/'
 	},
 	{
-		image: '/slides/slide3.jpg',
+		image: '/slides/slide3.png',
 		link: 'https://www.youtube.com/'
 	}
 ];
