Modulos de productos - 05

--- a/src/components/menuHeader/somos/somos.astro
+++ b/src/components/menuHeader/somos/somos.astro
@@ -7,7 +7,7 @@ import './somos.css';
     <Sidebar active="quienes_somos" />
     
     <main class="content">
-        <section>
+        <section id="historia">
             <img class="image" src="/cards/historia.png" alt="Alianza para el Agro" />
             <h2>¿Quiénes somos?</h2>
             <p>
@@ -44,7 +44,7 @@ import './somos.css';
             </p>
         </section>
         
-        <section>
+        <section id="marca">
             <h2>Nuestra marca</h2>
             <p><strong>ALAGRO</strong> es una marca con propósito, construida desde el territorio y al servicio de quienes 
                 trabajan en el campo. Representa el valor de la asociatividad, la confianza y el compromiso 
@@ -59,13 +59,13 @@ import './somos.css';
             </p>
         </section>
         
-        <section>
+        <section id="compromiso">
             <h2>Compromiso</h2>
             <p>Integrar lo mejor del campo, valorando el trabajo de las familias campesinas.
             </p>
         </section>
 
-        <section>
+        <section id="valores">
             <h2>Valores corporativos</h2>
             <h3>Liderazgo</h3>
             <p>Iniciativa, empoderamiento de sus directivos y equipo de trabajo.</p>
@@ -79,6 +79,10 @@ import './somos.css';
             <p>Resultados que contribuyen con la sostenibilidad de la cooperativa y así mismo con sus asociados.</p>
             <h3>Innovación</h3>
             <p> Desarrollo de productos diferenciales que ponen valor a nuestra labor.</p>
+        </section>
+        <section id="organigrama">
+            <h2>Organigrama</h2>
+            <img class="image-organigrama" src="/archives/organigrama.png" alt="Organigrama Alagro" />
         </section>
     </main>
 </div>
