--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,6 +34,12 @@
 	--color-header: #eaeaea;
 	--background: #ffffff;
 	--background-accent: #e0e7ff;
+
+	--lalola-color: rgba(23,148,169);
+
+	--larueda-color: rgba(15,32,48);
+	--larueda-color-secondary: #f0d2bb;
+	--larueda-color--dark:#c6ab82;
 }
 
 
