--- a/src/components/home/proposito/proposito.css
+++ b/src/components/home/proposito/proposito.css
@@ -39,7 +39,7 @@
 	font-weight: 600;
 
 	color: #fff;
-	background-color: var(--color-secondary);
+	background-color: var(--color-primary);
 	border-radius: 999px;
 
 	text-decoration: none;
