--- a/src/components/menuHeader/asociados/deberes.astro
+++ b/src/components/menuHeader/asociados/deberes.astro
@@ -1,6 +1,6 @@
 ---
 import Sidebar from '../../sidebar/sidebar.astro';
-import './asociados.css';
+import 'menuHeader.css';
 ---
 
 <div class="page-container">
