--- a/src/components/menuHeader/estatutos/codigo.astro
+++ b/src/components/menuHeader/estatutos/codigo.astro
@@ -1,6 +1,6 @@
 ---
 import Sidebar from '../../sidebar/sidebar.astro';
-import './estatutos.css';
+import '../menuHeader.css';
 ---
 
 <div class="page-container">
