--- a/src/components/menuHeader/estatutos/marcoNormativo.astro
+++ b/src/components/menuHeader/estatutos/marcoNormativo.astro
@@ -1,6 +1,7 @@
 ---
 import Sidebar from '../../sidebar/sidebar.astro';
-import './estatutos.css';
+import '../menuHeader.css';
+
 ---
 
 <div class="page-container">
