--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -1,27 +1,29 @@
 ---
 import { ViewTransitions } from 'astro:transitions';
-// Importa el CSS aquí para que Astro lo procese correctamente
-import '../styles/global.css'; 
+import Whatsapp from '../components/whatsapp/whatsapp.astro';
+import '../styles/global.css';
 ---
 
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <!-- ELIMINA ESTA LÍNEA: <link rel="stylesheet" href="/src/styles/global.css" /> -->
-    
-    <!-- Para las imágenes en src, es mejor usar la carpeta public o importarlas -->
-    <link rel="icon" type="image/png" href="/logoEmpresa.png" /> 
-    
-    <title>Alagro</title>
-    <ViewTransitions />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width" />
+
+  <link rel="icon" type="image/png" href="/logoEmpresa.png" />
+  <title>Alagro</title>
+
+  <ViewTransitions />
 </head>
 
 <body>
 
-	<main>
-		<slot />
-	</main>
+    <main>
+        <slot />
+    </main>
+    <Whatsapp/>
+
 </body>
 </html>
+
+
