--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -69,6 +69,7 @@ a {
 p {
 	color: var(--color-bg);
 	text-decoration: none;
+	text-align: justify;
 }
 p {
     font-size: 25px;
@@ -80,3 +81,4 @@ h1{
 h3, h4, h5, h6 {
     color: var(--color-bg);
 }
+
